Add role-based authorization